# Books

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
app/: _books_filling.py  _db_filling.py  config.py  main.py
app/api/graphql/: _selected_fields.py  _stmt_filters.py  deps.py  resolvers.py  schema.graphql
app/core/: config.py
app/db/: base.py  models.py
books/books/: asgi.py  settings.py
